Fix style: adjust the calculator width and heigth
the calculator when opened in a mobile device would be too wide and not
be centrered, when shrinking the heigth the main contraner would shrink
following 40vh but at a point the buttons couldn't as result it would
break the design

--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@
     border: 2px solid rgb(134, 134, 134);
     margin: auto;
     max-width: 400px;
-    width: 100%;
+    width: 90%;
     height: 40vh;
+    min-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content:space-between;
@@ -32,6 +33,7 @@
 .keyboard-container {
     display: flex;
     height: 80%;
+    gap: 3px;
 }
 
 .column-container {
